remove config.platform.php from composer.json

--- a/composer.json
+++ b/composer.json
@@ -43,10 +43,7 @@
         }
     },
     "config": {
-        "sort-packages": true,
-        "platform": {
-            "php": "5.3.9"
-        }
+        "sort-packages": true
     },
     "minimum-stability": "dev",
     "prefer-stable": true
